Created Lua Follow cam and other fixes
* Added ScreenCoordsToWorld and WorldCoordsToScreen in the camera2d class.
* Added missing bindings for the camera class and adjusted the lua bindings.
* Adjusted the mouse bindings to return a vec2 for the screen position and the screen position to world position.
* Created simple lua follow cam.

--- a/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
@@ -44,6 +44,7 @@
     <None Include="assets\shaders\circleShader.frag" />
     <None Include="assets\shaders\fontShader.vert" />
     <None Include="assets\shaders\fontShader.frag" />
+    <None Include="assets\scripts\follow_cam.lua" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
