--- a/SCION_EDITOR/SCION_EDITOR.vcxproj
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj
@@ -183,6 +183,7 @@
     <None Include="assets\scripts\asteroids\ship.lua" />
     <None Include="assets\scripts\asteroids\utilities.lua" />
     <None Include="assets\scripts\follow_cam.lua" />
+    <None Include="assets\scripts\lua_test_scripts.lua" />
     <None Include="assets\scripts\main.lua" />
     <None Include="assets\scripts\TestProject\assetDefs.lua" />
     <None Include="assets\scripts\utilities.lua" />
