--- a/SCION_PHYSICS/SCION_PHYSICS.vcxproj.filters
+++ b/SCION_PHYSICS/SCION_PHYSICS.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="Physics\ContactListener.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Physics\UserData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
