Added Framebuffer class
* Added new framebuffer class
* Added LoadFBTexture to texture Loader
* Added ability to render scene to ImGui window.
* Started ImGui Dockspace
* Started ability to create texture from memory

--- a/SCION_EDITOR/SCION_EDITOR.vcxproj
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\editor\displays\SceneDisplay.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +208,7 @@
   <ItemGroup>
     <ClInclude Include="assets\scripts\rain_generator.lua" />
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\editor\displays\SceneDisplay.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
