--- a/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
+++ b/SCION_EDITOR/SCION_EDITOR.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\editor\displays\SceneDisplay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\basicShader.vert" />
@@ -55,6 +58,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="assets\scripts\rain_generator.lua">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\editor\displays\SceneDisplay.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
