--- a/SCION_EDITOR/imgui.ini
+++ b/SCION_EDITOR/imgui.ini
@@ -4,9 +4,24 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=242,35
-Size=1078,745
+Pos=0,0
+Size=441,1057
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1920,1057
 Collapsed=0
 
+[Window][Scene]
+Pos=443,0
+Size=1477,1057
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,1057 Split=X Selected=0xE87781F4
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=441,1057 Selected=0xE87781F4
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1477,1057 CentralNode=1 Selected=0xE192E354
 
