--- a/SCION_CORE/SCION_CORE.vcxproj.filters
+++ b/SCION_CORE/SCION_CORE.vcxproj.filters
@@ -105,6 +105,12 @@
     <ClInclude Include="Core\Scripting\ContactListenerBind.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Core\States\State.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\States\StateStack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core\ECS\Registry.cpp">
@@ -186,6 +192,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Core\Scripting\ContactListenerBind.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Core\States\State.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Core\States\StateStack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
