Fixed Window Bug
* The main window size was changing when the imgui scene display was being adjusted.
* Also fixed the renderer clear function.

--- a/SCION_EDITOR/imgui.ini
+++ b/SCION_EDITOR/imgui.ini
@@ -15,10 +15,10 @@ Size=1920,1057
 Collapsed=0
 
 [Window][Scene]
-Pos=443,0
-Size=1477,1057
+ViewportPos=2058,93
+ViewportId=0x18B8C0DE
+Size=1360,946
 Collapsed=0
-DockId=0x00000002,0
 
 [Docking][Data]
 DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,1057 Split=X Selected=0xE87781F4
