--- a/Dependencies/soil/CMakeLists.txt
+++ b/Dependencies/soil/CMakeLists.txt
@@ -6,3 +6,4 @@ add_library(soil
 
 target_include_directories(
   soil PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(soil PRIVATE glad)
