--- a/SCION_SOUNDS/CMakeLists.txt
+++ b/SCION_SOUNDS/CMakeLists.txt
@@ -14,5 +14,5 @@ add_library(SCION_SOUNDS
 target_include_directories(
     SCION_SOUNDS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(SCION_SOUNDS
-    PRIVATE SDL2_mixer::SDL2_mixer
+    PRIVATE $<IF:$<TARGET_EXISTS:SDL2_mixer::SDL2_mixer>,SDL2_mixer::SDL2_mixer,SDL2_mixer::SDL2_mixer-static>
     PUBLIC SCION_UTILITIES)
